# MCPLite

./: .gitignore  Agent.py  Client.py  Host.py  MCPMessage.py  MCPPrompt.py  MCPRegistry.py  MCPResource.py  MCPTool.py  README.md  ROADMAP.md  Server.py  Transport.py  ]  __init__.py  chaintest.py  e2e.py  mcp_system_prompt.jinja2  mcplite.py  mvp.py  notes.md  pyproject.toml  test_mcp.py
cli/: notes.md
client/: Client.py
full/mcp/: readme.md
host/: .message_store_log  Host.py  }}
inventory/: JSONL_CRUD.py  ServerInfo.py  ServerInventory.py  available_servers.jsonl  update.py
logs/: logging_config.py
main/: example_prompt.py  example_resource_template.py  main.py  main_stdio.py  mcp_servers.yaml  sse_server.py  stdio_server.py  trace
mcpchat/: e2e.py  mcpchat.py  test_direct.py  test_stdio.py
mcplite/: mcplite.py
messages/: Definitions.py  Errors.py  JsonString.py  ListRequest.py  ListResult.py  MCPMessage.py  Notifications.py  Requests.py  Responses.py  __init__.py
messages/init/: ClientInit.py  Initialized.py  ServerInit.py  notes.md
primitives/: MCPPrompt.py  MCPRegistry.py  MCPResource.py  MCPResourceTemplate.py  MCPTool.py  Primitive.py  __init__.py
prompts/: mcp_system_prompt.jinja2  server_description.jinja2
routes/: ClientRoutes.py  ServerRoutes.py
server/: Routes.py  Server.py
servers/: .chain_cache.db  JSONL_CRUD.py  ServerInfo.py  ServerInventory.py  obsidian.md  obsidian.py
tests/: test_strategy.md
tests/direct/: .message_store_log  (+1 more)
transport/: DirectTransport.py  SSETransport.py  StdioTransport.py  Transport.py  __init__.py
(+25 files in other folders)
