[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mcplite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "sse-starlette>=2.3.6",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]


[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

# Hatchling configuration (replaces setuptools.packages.find)
[tool.hatch.build.targets.wheel]
packages = ["MCPLite"]
